--- a/Ren-Py-Designer.csproj
+++ b/Ren-Py-Designer.csproj
@@ -9,8 +9,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NodeNetwork" Version="6.0.0" />
-    <PackageReference Include="NodeNetworkToolkit" Version="6.0.0" />
     <PackageReference Include="WPF-UI" Version="2.0.2" />
   </ItemGroup>
 
@@ -29,8 +27,8 @@
 
   <ItemGroup>
     <Folder Include="Models\" />
+    <Folder Include="ViewModels\Nodes\" />
     <Folder Include="Views\" />
-    <Folder Include="ViewModels\" />
   </ItemGroup>
 
 </Project>
